2005-09-26  Paul Brook  <paul@codesourcery.com>

	* arm-tdep.c (arm_type_align): New function.
	(arm_push_dummy_call): Use it.  Ensure proper argument alignment.
	(arm_extract_struct_value_address): Remove.
	(arm_use_struct_convention): Rename...
	(arm_return_in_memory): ... To this.  Return nonzero for all small
	aggregates under the EABI.
	(arm_return_value): New function.
	(arm_gdbarch_init): Default for VFP float model for EABI binaries.
	Use set_gdbarch_return_value instead of obsolete functions.
	* testsuite/long_long.exp: Exclude eabi targets from arm FPA float
	format test.

2005-09-21  Mark Kettenis  <kettenis@gnu.org>

	* mips-tdep.c (n32n64_floatformat_always_valid): Use 'const void
	*' for second argument instead of 'const char *'.

2005-09-20  Paul Gilliam  <pgilliam@us.ibm.com>

        * gdb.arch/altivec-abi.exp: Elide the 'in' from what's expected
         after a 'finish' command.

2005-09-20  Wu Zhou  <woodzltc@cn.ibm.com>

	* c-exp.y (parse-number): Modify the float parsing logic to let it 
	recognize a suffix.

2005-09-20  Wu Zhou  <woodzltc@cn.ibm.com>

	* expression.h (enum exp_opcode): Fix a format error of a comment.
 
2005-09-20  Wu Zhou  <woodzltc@cn.ibm.com>

	* expression.h (enum exp_opcode): Add a new operator for F90
	subrange.
	* f-lang.h (enum f90_range_type): New enumeration type to identify
	F90 subrange type.
	* f-exp.y (yyparse): Add support for parsing F90 subrange and
	change substring parsing to subrange parsing.
	* parse.c (operator_length_standard): Set the operator length
	and args number for OP_F90_RANGE.
	* eval.c (evaluate_subexp_standard): Add code to evaluate F90
	array section and substring.
	(value_f90_subarray): New function to evaluate F90 array section.
	(evaluate_subexp_standard): Delete label op_f77_substr and its code
	because the logic is implemented by function value_f90_subarray now.

2005-09-19  Paul Gilliam  <pgilliam@us.ibm.com>

	* rs6000-tdep.c (_initialize_rs6000_tdep): Get rid of the unused